--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Reconnecting by nhpuls</title>
+    <title>reconnecting by nhpuls</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Reconnecting</h1>
+        <h1>reconnecting</h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/nhpuls/reconnecting">View the Project on GitHub <small>nhpuls/reconnecting</small></a></p>
